logs/feather-http.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/feather'...
Compiling './lib/python3.5/site-packages/feather/connections.py'...
***   File "./lib/python3.5/site-packages/feather/connections.py", line 63
    except socket.error, exc:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/feather/http.py'...
***   File "./lib/python3.5/site-packages/feather/http.py", line 241
    except HTTPError, error:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/feather/monitor.py'...
***   File "./lib/python3.5/site-packages/feather/monitor.py", line 73
    os.mknod(path, 0644 | stat.S_IFREG)
                      ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/feather/servers.py'...
***   File "./lib/python3.5/site-packages/feather/servers.py", line 132
    except socket.error, error:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/feather/wsgi.py'...
***   File "./lib/python3.5/site-packages/feather/wsgi.py", line 103
    raise exc_info[0], exc_info[1], exc_info[2]
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/feather_http-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/greenhouse'...
Compiling './lib/python3.5/site-packages/greenhouse/compat.py'...
***   File "./lib/python3.5/site-packages/greenhouse/compat.py", line 5
    except ImportError, error:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/greenhouse/emulation'...
Compiling './lib/python3.5/site-packages/greenhouse/emulation/dns.py'...
***   File "./lib/python3.5/site-packages/greenhouse/emulation/dns.py", line 66
    except dns.exception.Timeout, exc:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/greenhouse/emulation/fcntl.py'...
***   File "./lib/python3.5/site-packages/greenhouse/emulation/fcntl.py", line 27
    except EnvironmentError, exc:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/greenhouse/emulation/os.py'...
***   File "./lib/python3.5/site-packages/greenhouse/emulation/os.py", line 54
    except EnvironmentError, exc:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/greenhouse/emulation/socket.py'...
***   File "./lib/python3.5/site-packages/greenhouse/emulation/socket.py", line 35
    except socket.error, exc:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/greenhouse/emulation/zmq.py'...
***   File "./lib/python3.5/site-packages/greenhouse/emulation/zmq.py", line 39
    except zmq.ZMQError, exc:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/greenhouse/ext'...
Listing './lib/python3.5/site-packages/greenhouse/io'...
Compiling './lib/python3.5/site-packages/greenhouse/io/files.py'...
***   File "./lib/python3.5/site-packages/greenhouse/io/files.py", line 226
    except OSError, exc:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/greenhouse/io/sockets.py'...
***   File "./lib/python3.5/site-packages/greenhouse/io/sockets.py", line 74
    except EnvironmentError, exc:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/greenhouse/io/ssl.py'...
***   File "./lib/python3.5/site-packages/greenhouse/io/ssl.py", line 45
    except socket.error, exc:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/greenhouse/pool.py'...
***   File "./lib/python3.5/site-packages/greenhouse/pool.py", line 163
    raise klass, exc, tb
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/greenhouse/scheduler.py'...
***   File "./lib/python3.5/site-packages/greenhouse/scheduler.py", line 136
    except KeyboardInterrupt, exc:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/greenhouse-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
